--- a/cookbook/ch8.ipynb
+++ b/cookbook/ch8.ipynb
@@ -720,11 +720,602 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8dad182a-156c-484b-ae06-6484ea5a50af",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setting x = 23\n",
+      "Getting x\n",
+      "Deleting x\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'x already set'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 70\u001b[0m\n\u001b[0;32m     68\u001b[0m d[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m23\u001b[39m\n\u001b[0;32m     69\u001b[0m \u001b[38;5;66;03m# d[42] = 10\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m \u001b[43md\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mx\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m42\u001b[39m\n",
+      "Cell \u001b[1;32mIn[7], line 39\u001b[0m, in \u001b[0;36mStringKeysMappingMixin.__setitem__\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m     38\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mKeys must be strings\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 39\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__setitem__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[7], line 27\u001b[0m, in \u001b[0;36mSetOnceMappingMixin.__setitem__\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__setitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key, value):\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m:\n\u001b[1;32m---> 27\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;28mstr\u001b[39m(key) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m already set\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     28\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__setitem__\u001b[39m(key, value)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'x already set'"
+     ]
+    }
+   ],
+   "source": [
+    "class LoggedMappingMixin:\n",
+    "    '''\n",
+    "    Add logging to get/set/delete operations for debugging.\n",
+    "    '''\n",
+    "    __slots__ = ()\n",
+    "\n",
+    "    def __getitem__(self, key):\n",
+    "        print('Getting ' + str(key))\n",
+    "        return super().__getitem__(key)\n",
+    "\n",
+    "    def __setitem__(self, key, value):\n",
+    "        print('Setting {} = {}'.format(key, value))\n",
+    "        return super().__setitem__(key, value)\n",
+    "\n",
+    "    def __delitem__(self, key):\n",
+    "        print('Deleting ' + str(key))\n",
+    "        return super().__delitem__(key)\n",
+    "\n",
+    "\n",
+    "class SetOnceMappingMixin:\n",
+    "    '''\n",
+    "    Only allow a key to be set once.\n",
+    "    '''\n",
+    "    __slots__ = ()\n",
+    "    def __setitem__(self, key, value):\n",
+    "        if key in self:\n",
+    "            raise KeyError(str(key) + ' already set')\n",
+    "        return super().__setitem__(key, value)\n",
+    "\n",
+    "\n",
+    "class StringKeysMappingMixin:\n",
+    "    '''\n",
+    "    Restrict keys to strings only\n",
+    "    '''\n",
+    "    __slots__ = ()\n",
+    "    def __setitem__(self, key, value):\n",
+    "        if not isinstance(key, str):\n",
+    "            raise TypeError('Keys must be strings')\n",
+    "        return super().__setitem__(key, value)\n",
+    "\n",
+    "\n",
+    "class LoggedDict(LoggedMappingMixin, dict):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "d = LoggedDict()\n",
+    "d['x'] = 23\n",
+    "d['x']\n",
+    "del d['x']\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "class SetOnceDefaultDict(SetOnceMappingMixin, defaultdict):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "d = SetOnceDefaultDict(list)\n",
+    "d['x'].append(2)\n",
+    "d['y'].append(3)\n",
+    "d['x'].append(10)\n",
+    "# d['x'] = 23\n",
+    "\n",
+    "\n",
+    "from collections import OrderedDict\n",
+    "class StringOrderedDict(StringKeysMappingMixin, SetOnceMappingMixin, OrderedDict):\n",
+    "    pass\n",
+    "\n",
+    "d = StringOrderedDict()\n",
+    "d['x'] = 23\n",
+    "# d[42] = 10\n",
+    "d['x'] = 42\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "79f635c7-7c17-40dd-b575-cc81d489a221",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.ClosedConnectionState'>\n",
+      "<class '__main__.OpenConnectionState'>\n",
+      "reading\n",
+      "writing\n",
+      "<class '__main__.ClosedConnectionState'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Connection:\n",
+    "    def __init__(self):\n",
+    "        self.new_state(ClosedConnectionState)\n",
+    "\n",
+    "    def new_state(self, newstate):\n",
+    "        self._state = newstate\n",
+    "\n",
+    "    def read(self):\n",
+    "        return self._state.read(self)\n",
+    "\n",
+    "    def write(self, data):\n",
+    "        return self._state.write(self, data)\n",
+    "\n",
+    "    def open(self):\n",
+    "        return self._state.open(self)\n",
+    "\n",
+    "    def close(self):\n",
+    "        return self._state.close(self)\n",
+    "\n",
+    "\n",
+    "class ConnectionState:\n",
+    "    @staticmethod\n",
+    "    def read(conn):\n",
+    "        raise NotImplementedError()\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def write(conn, data):\n",
+    "        raise NotImplementedError()\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def open(conn):\n",
+    "        raise NotImplementedError()\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def close(conn):\n",
+    "        raise NotImplementedError()\n",
+    "\n",
+    "\n",
+    "class ClosedConnectionState(ConnectionState):\n",
+    "    @staticmethod\n",
+    "    def read(conn):\n",
+    "        raise RuntimeError('Not open')\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def write(conn, data):\n",
+    "        raise RuntimeError('Not open')\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def open(conn):\n",
+    "        conn.new_state(OpenConnectionState)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def close(conn):\n",
+    "        raise RuntimeError('Already closed')\n",
+    "\n",
+    "\n",
+    "class OpenConnectionState(ConnectionState):\n",
+    "    @staticmethod\n",
+    "    def read(conn):\n",
+    "        print('reading')\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def write(conn, data):\n",
+    "        print('writing')\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def open(conn):\n",
+    "        raise RuntimeError('Already open')\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def close(conn):\n",
+    "        conn.new_state(ClosedConnectionState)\n",
+    "\n",
+    "\n",
+    "c = Connection()\n",
+    "print(c._state)\n",
+    "# c.read()\n",
+    "c.open()\n",
+    "print(c._state)\n",
+    "c.read()\n",
+    "c.write('hello')\n",
+    "c.close()\n",
+    "print(c._state)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "be625114-ae01-49f7-86a7-d62a7d1471b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.605551275463989\n",
+      "3.605551275463989\n",
+      "[Point(1,2), Point(3,0), Point(3,2), Point(-1,8), Point(-5,-7), Point(10,-3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "class Point:\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return 'Point({!r:},{!r:})'.format(self.x, self.y)\n",
+    "\n",
+    "    def distance(self, x, y):\n",
+    "        return math.hypot(self.x - x, self.y - y)\n",
+    "\n",
+    "p = Point(2, 3)\n",
+    "d = getattr(p, 'distance')(0, 0)\n",
+    "print(d)\n",
+    "\n",
+    "print(p.distance(0, 0))\n",
+    "\n",
+    "import operator\n",
+    "operator.methodcaller('distance', 0, 0)(p)\n",
+    "\n",
+    "points = [\n",
+    "    Point(1, 2),\n",
+    "    Point(3, 0),\n",
+    "    Point(10, -3),\n",
+    "    Point(-5, -7),\n",
+    "    Point(-1, 8),\n",
+    "    Point(3, 2)\n",
+    "]\n",
+    "\n",
+    "points.sort(key=operator.methodcaller('distance', 0, 0))\n",
+    "\n",
+    "print(points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fe2355c-82f7-451e-8e1f-ce5846ec111e",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Node:\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "class UnaryOperator(Node):\n",
+    "    def __init__(self, operand):\n",
+    "        self.operand = operand\n",
+    "\n",
+    "class BinaryOperator(Node):\n",
+    "    def __init__(self, left, right):\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "\n",
+    "class Add(BinaryOperator):\n",
+    "    pass\n",
+    "\n",
+    "class Sub(BinaryOperator):\n",
+    "    pass\n",
+    "\n",
+    "class Mul(BinaryOperator):\n",
+    "    pass\n",
+    "\n",
+    "class Div(BinaryOperator):\n",
+    "    pass\n",
+    "\n",
+    "class Negate(UnaryOperator):\n",
+    "    pass\n",
+    "\n",
+    "class Number(Node):\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "\n",
+    "t1 = Sub(Number(3), Number(4))\n",
+    "t2 = Mul(Number(2), t1)\n",
+    "t3 = Div(t2, Number(5))\n",
+    "t4 = Add(Number(1), t3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "70c56320-5bca-40d5-adee-10ff5816c718",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'type'>\n",
+      "type\n",
+      "<class '__main__.Test'>\n",
+      "Test\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Test:\n",
+    "    pass\n",
+    "\n",
+    "print(type(Test))\n",
+    "print(type(Test).__name__)\n",
+    "\n",
+    "t = Test()\n",
+    "print(type(t))\n",
+    "print(type(t).__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4ff5b7a6-9fbd-4262-b012-6065f459c86a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Node:\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "class UnaryOperator(Node):\n",
+    "    def __init__(self, operand):\n",
+    "        self.operand = operand\n",
+    "\n",
+    "class BinaryOperator(Node):\n",
+    "    def __init__(self, left, right):\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "\n",
+    "class Add(BinaryOperator):\n",
+    "    pass\n",
+    "\n",
+    "class Sub(BinaryOperator):\n",
+    "    pass\n",
+    "\n",
+    "class Mul(BinaryOperator):\n",
+    "    pass\n",
+    "\n",
+    "class Div(BinaryOperator):\n",
+    "    pass\n",
+    "\n",
+    "class Negate(UnaryOperator):\n",
+    "    pass\n",
+    "\n",
+    "class Number(Node):\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "\n",
+    "t1 = Sub(Number(3), Number(4))\n",
+    "t2 = Mul(Number(2), t1)\n",
+    "t3 = Div(t2, Number(5))\n",
+    "t4 = Add(Number(1), t3)\n",
+    "\n",
+    "class NodeVisitor:\n",
+    "    def visit(self, node):\n",
+    "        methname = 'visit_' + type(node).__name__\n",
+    "        meth = getattr(self, methname, None)\n",
+    "        if meth is None:\n",
+    "            meth = self.generic_visit\n",
+    "        return meth(node)\n",
+    "\n",
+    "    def generic_visit(self, node):\n",
+    "        raise RuntimeError('No {} method'.format('visit_' + type(node).__name__))\n",
+    "\n",
+    "class Evaluator(NodeVisitor):\n",
+    "    def visit_Number(self, node):\n",
+    "        return node.value\n",
+    "\n",
+    "    def visit_Add(self, node):\n",
+    "        return self.visit(node.left) + self.visit(node.right)\n",
+    "\n",
+    "    def visit_Sub(self, node):\n",
+    "        return self.visit(node.left) - self.visit(node.right)\n",
+    "\n",
+    "    def visit_Mul(self, node):\n",
+    "        return self.visit(node.left) * self.visit(node.right)\n",
+    "\n",
+    "    def visit_Div(self, node):\n",
+    "        return self.visit(node.left) / self.visit(node.right)\n",
+    "\n",
+    "    def visit_Negate(self, node):\n",
+    "        return -node.operand\n",
+    "\n",
+    "\n",
+    "e = Evaluator()\n",
+    "e.visit(t4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b40dc692-a964-49d9-a257-9afd99881240",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node(parent)\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import weakref\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        self._parent = None\n",
+    "        self.children = []\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return 'Node({})'.format(self.value)\n",
+    "\n",
+    "    @property\n",
+    "    def parent(self):\n",
+    "        return self._parent if self._parent is None else self._parent()\n",
+    "\n",
+    "    @parent.setter\n",
+    "    def parent(self, node):\n",
+    "        self._parent = weakref.ref(node)\n",
+    "\n",
+    "    def add_child(self, child):\n",
+    "        self.children.append(child)\n",
+    "        child.parent = self\n",
+    "\n",
+    "root = Node('parent')\n",
+    "c1 = Node('child')\n",
+    "root.add_child(c1)\n",
+    "print(c1.parent)\n",
+    "del root\n",
+    "print(c1.parent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "33db5fc6-cb4d-4c15-81c7-4361eed1e3fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is h1 bigger than h2? True\n",
+      "Is h2 smaller than h3? True\n",
+      "Is h2 greater than or equal to h1? False\n",
+      "Which one is biggest? h3: 1101-square-foot Split\n",
+      "Which is smallest? h2: 846-square-foot Ranch\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import total_ordering\n",
+    "\n",
+    "class Room:\n",
+    "    def __init__(self, name, length, width):\n",
+    "        self.name = name\n",
+    "        self.length = length\n",
+    "        self.width = width\n",
+    "        self.square_feet = self.length * self.width\n",
+    "\n",
+    "@total_ordering\n",
+    "class House:\n",
+    "    def __init__(self, name, style):\n",
+    "        self.name = name\n",
+    "        self.style = style\n",
+    "        self.rooms = list()\n",
+    "\n",
+    "    @property\n",
+    "    def living_space_footage(self):\n",
+    "        return sum(r.square_feet for r in self.rooms)\n",
+    "\n",
+    "    def add_room(self, room):\n",
+    "        self.rooms.append(room)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f'{self.name}: {self.living_space_footage}-square-foot {self.style}'\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        return self.living_space_footage == other.living_space_footage\n",
+    "\n",
+    "    def __lt__(self, other):\n",
+    "        return self.living_space_footage < other.living_space_footage\n",
+    "\n",
+    "\n",
+    "h1 = House('h1', 'Cape')\n",
+    "h1.add_room(Room('Master Bedroom', 14, 21))\n",
+    "h1.add_room(Room('Living Room', 18, 20))\n",
+    "h1.add_room(Room('Kitchen', 12, 16))\n",
+    "h1.add_room(Room('Office', 12, 12))\n",
+    "\n",
+    "h2 = House('h2', 'Ranch')\n",
+    "h2.add_room(Room('Master Bedroom', 14, 21))\n",
+    "h2.add_room(Room('Living Room', 18, 20))\n",
+    "h2.add_room(Room('Kitchen', 12, 16))\n",
+    "\n",
+    "h3 = House('h3', 'Split')\n",
+    "h3.add_room(Room('Master Bedroom', 14, 21))\n",
+    "h3.add_room(Room('Living Room', 18, 20))\n",
+    "h3.add_room(Room('Office', 12, 16))\n",
+    "h3.add_room(Room('Kitchen', 15, 17))\n",
+    "\n",
+    "houses = [h1, h2, h3]\n",
+    "\n",
+    "print('Is h1 bigger than h2?', h1 > h2)\n",
+    "print('Is h2 smaller than h3?', h2 < h3)\n",
+    "print('Is h2 greater than or equal to h1?', h2 >= h1)\n",
+    "print('Which one is biggest?', max(houses))\n",
+    "print('Which is smallest?', min(houses))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d04e4c23-471a-40c2-b1d6-9b98e1d7a41e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "['foo', 'bar']\n",
+      "['foo', 'bar']\n",
+      "['bar']\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Spam:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "import weakref\n",
+    "_spam_cache = weakref.WeakValueDictionary()\n",
+    "\n",
+    "def get_spam(name):\n",
+    "    if name not in _spam_cache:\n",
+    "        s = Spam(name)\n",
+    "        _spam_cache[name] = s\n",
+    "    else:\n",
+    "        s = _spam_cache[name]\n",
+    "\n",
+    "    return s\n",
+    "\n",
+    "a = get_spam('foo')\n",
+    "b = get_spam('bar')\n",
+    "print(a is b)\n",
+    "c = get_spam('foo')\n",
+    "print(a is c)\n",
+    "print(list(_spam_cache))\n",
+    "del a\n",
+    "print(list(_spam_cache))\n",
+    "del c\n",
+    "print(list(_spam_cache))\n",
+    "del b\n",
+    "print(list(_spam_cache))"
+   ]
   }
  ],
  "metadata": {
