--- a/cookbook/ch9.ipynb
+++ b/cookbook/ch9.ipynb
@@ -160,11 +160,463 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f7b15fde-f876-44ca-a268-e266f558769c",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:__main__:add\n",
+      "DEBUG:__main__:Add called\n",
+      "WARNING:__main__:Add called\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import wraps, partial\n",
+    "import logging\n",
+    "\n",
+    "def attach_wrapper(obj, func=None):\n",
+    "    if func is None:\n",
+    "        return partial(attach_wrapper, obj)\n",
+    "    setattr(obj, func.__name__, func)\n",
+    "    return func\n",
+    "\n",
+    "def logged(level, name=None, message=None):\n",
+    "    def decorate(func):\n",
+    "        logname = name if name else func.__module__\n",
+    "        log = logging.getLogger(logname)\n",
+    "        logmsg = message if message else func.__name__\n",
+    "\n",
+    "        @wraps(func)\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            log.log(level, logmsg)\n",
+    "            return func(*args, **kwargs)\n",
+    "\n",
+    "        @attach_wrapper(wrapper)\n",
+    "        def set_level(newlevel):\n",
+    "            nonlocal level\n",
+    "            level = newlevel\n",
+    "\n",
+    "        @attach_wrapper(wrapper)\n",
+    "        def set_message(newmsg):\n",
+    "            nonlocal logmsg\n",
+    "            logmsg = newmsg\n",
+    "\n",
+    "        return wrapper\n",
+    "    return decorate\n",
+    "\n",
+    "\n",
+    "# Example use\n",
+    "@logged(logging.DEBUG)\n",
+    "def add(x, y):\n",
+    "    return x + y\n",
+    "\n",
+    "@logged(logging.CRITICAL, 'example')\n",
+    "def spam():\n",
+    "    print('Spam!')\n",
+    "\n",
+    "\n",
+    "import logging\n",
+    "logging.basicConfig(level=logging.DEBUG)\n",
+    "print(add(2, 3))\n",
+    "\n",
+    "# change the log message\n",
+    "add.set_message('Add called')\n",
+    "print(add(2, 3))\n",
+    "\n",
+    "# change the log level\n",
+    "add.set_level(logging.WARNING)\n",
+    "print(add(2, 3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c5f8c512-e40c-49af-8e33-cff272dba4ee",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from functools import wraps, partial\n",
+    "import logging\n",
+    "\n",
+    "def logged(func=None, *, level=logging.DEBUG, name=None, message=None):\n",
+    "    if func is None:\n",
+    "        return partial(logged, level=level, name=name, message=message)\n",
+    "\n",
+    "    logname = name if name else func.__module__\n",
+    "    log = logging.getLogger(logname)\n",
+    "    logmsg = message if message else func.__name__\n",
+    "\n",
+    "    @wraps(func)\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        log.log(level, logmsg)\n",
+    "        return func(*args, **kwargs)\n",
+    "    return wrapper\n",
+    "\n",
+    "@logged\n",
+    "def add(x, y):\n",
+    "    return x + y\n",
+    "\n",
+    "@logged(level=logging.CRITICAL, name='example')\n",
+    "def spam():\n",
+    "    print('Spam!')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4018e814-34e1-46a6-be5f-03c6655a35c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n",
+      "1 hello 3\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Argument z must <class 'int'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 33\u001b[0m\n\u001b[0;32m     31\u001b[0m spam(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m)\n\u001b[0;32m     32\u001b[0m spam(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhello\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m---> 33\u001b[0m \u001b[43mspam\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhello\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mworld\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[15], line 18\u001b[0m, in \u001b[0;36mtypeassert.<locals>.decorate.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m bound_types:\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value, bound_types[name]):\n\u001b[1;32m---> 18\u001b[0m             \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[0;32m     19\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mArgument \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m must \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(name, bound_types[name])\n\u001b[0;32m     20\u001b[0m             )\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Argument z must <class 'int'>"
+     ]
+    }
+   ],
+   "source": [
+    "from inspect import signature\n",
+    "from functools import wraps\n",
+    "\n",
+    "def typeassert(*ty_args, **ty_kwargs):\n",
+    "    def decorate(func):\n",
+    "        if not __debug__:\n",
+    "            return func\n",
+    "\n",
+    "        sig = signature(func)\n",
+    "        bound_types = sig.bind_partial(*ty_args, **ty_kwargs).arguments\n",
+    "\n",
+    "        @wraps(func)\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            bound_values = sig.bind(*args, **kwargs)\n",
+    "            for name, value in bound_values.arguments.items():\n",
+    "                if name in bound_types:\n",
+    "                    if not isinstance(value, bound_types[name]):\n",
+    "                        raise TypeError(\n",
+    "                            'Argument {} must {}'.format(name, bound_types[name])\n",
+    "                        )\n",
+    "            return func(*args, **kwargs)\n",
+    "        return wrapper\n",
+    "    return decorate\n",
+    "\n",
+    "\n",
+    "@typeassert(int, z=int)\n",
+    "def spam(x, y, z=42):\n",
+    "    print(x, y, z)\n",
+    "\n",
+    "\n",
+    "spam(1, 2, 3)\n",
+    "spam(1, 'hello', 3)\n",
+    "spam(1, 'hello', 'world')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6ce97c7e-c79a-4a0c-8fec-ee120aafc6f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(x, y, z=42)\n",
+      "OrderedDict({'x': <Parameter \"x\">, 'y': <Parameter \"y\">, 'z': <Parameter \"z=42\">})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from inspect import signature\n",
+    "def spam(x, y, z=42):\n",
+    "    pass\n",
+    "\n",
+    "sig = signature(spam)\n",
+    "print(sig)\n",
+    "print(sig.parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "237c7cf7-e792-46e9-87af-8f8078ea557d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decorator 1\n",
+      "Decorator 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import wraps\n",
+    "\n",
+    "class A:\n",
+    "    def decorator1(self, func):\n",
+    "        @wraps(func)\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            print('Decorator 1')\n",
+    "            return func(*args, **kwargs)\n",
+    "        return wrapper\n",
+    "\n",
+    "    @classmethod\n",
+    "    def decorator2(cls, func):\n",
+    "        @wraps(func)\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            print('Decorator 2')\n",
+    "            return func(*args, **kwargs)\n",
+    "        return wrapper\n",
+    "\n",
+    "a = A()\n",
+    "\n",
+    "@a.decorator1\n",
+    "def spam():\n",
+    "    pass\n",
+    "\n",
+    "@A.decorator2\n",
+    "def grok():\n",
+    "    pass\n",
+    "\n",
+    "spam()\n",
+    "grok()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1596c3ea-2d6e-4471-aa80-e2a230d4b46f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spam.grok\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Can't instantiate directly",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSpam.grok\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     10\u001b[0m Spam\u001b[38;5;241m.\u001b[39mgrok(\u001b[38;5;241m42\u001b[39m)\n\u001b[1;32m---> 11\u001b[0m s \u001b[38;5;241m=\u001b[39m \u001b[43mSpam\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[20], line 3\u001b[0m, in \u001b[0;36mNoInstance.__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCan\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt instantiate directly\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Can't instantiate directly"
+     ]
+    }
+   ],
+   "source": [
+    "class NoInstance(type):\n",
+    "    def __call__(self, *args, **kwargs):\n",
+    "        raise TypeError(\"Can't instantiate directly\")\n",
+    "\n",
+    "class Spam(metaclass=NoInstance):\n",
+    "    @staticmethod\n",
+    "    def grok(x):\n",
+    "        print('Spam.grok')\n",
+    "\n",
+    "Spam.grok(42)\n",
+    "s = Spam()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "cb259b90-c69e-494e-ba17-4800f1b63973",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating Spam\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Singleton(type):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        self.__instance = None\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "\n",
+    "    def __call__(self, *args, **kwargs):\n",
+    "        if self.__instance is None:\n",
+    "            self.__instance = super().__call__(*args, **kwargs)\n",
+    "            return self.__instance\n",
+    "        else:\n",
+    "            return self.__instance\n",
+    "\n",
+    "class Spam(metaclass=Singleton):\n",
+    "    def __init__(self):\n",
+    "        print('Creating Spam')\n",
+    "\n",
+    "\n",
+    "a = Spam()\n",
+    "b = Spam()\n",
+    "print(b is a)\n",
+    "c = Spam()\n",
+    "print(a is c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7a598e3c-a486-4679-93c6-56026336602e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 42\n",
+    "print(eval('2 + 3*4 + x'))\n",
+    "exec('for i in range(10): print(i)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2884bc12-40ad-417d-9cb6-cd25615b99f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1           0 RESUME                   0\n",
+      "\n",
+      "  2           2 LOAD_FAST                0 (n)\n",
+      "              4 LOAD_CONST               1 (0)\n",
+      "              6 COMPARE_OP              68 (>)\n",
+      "             10 POP_JUMP_IF_FALSE       23 (to 58)\n",
+      "\n",
+      "  3     >>   12 LOAD_GLOBAL              1 (NULL + print)\n",
+      "             22 LOAD_CONST               2 ('T-minus')\n",
+      "             24 LOAD_FAST                0 (n)\n",
+      "             26 CALL                     2\n",
+      "             34 POP_TOP\n",
+      "\n",
+      "  4          36 LOAD_FAST                0 (n)\n",
+      "             38 LOAD_CONST               3 (1)\n",
+      "             40 BINARY_OP               23 (-=)\n",
+      "             44 STORE_FAST               0 (n)\n",
+      "\n",
+      "  2          46 LOAD_FAST                0 (n)\n",
+      "             48 LOAD_CONST               1 (0)\n",
+      "             50 COMPARE_OP              68 (>)\n",
+      "             54 POP_JUMP_IF_FALSE        1 (to 58)\n",
+      "             56 JUMP_BACKWARD           23 (to 12)\n",
+      "\n",
+      "  5     >>   58 LOAD_GLOBAL              1 (NULL + print)\n",
+      "             68 LOAD_CONST               4 ('Blastoff!')\n",
+      "             70 CALL                     1\n",
+      "             78 POP_TOP\n",
+      "             80 RETURN_CONST             0 (None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def countdown(n):\n",
+    "    while n > 0:\n",
+    "        print('T-minus', n)\n",
+    "        n -= 1\n",
+    "    print('Blastoff!')\n",
+    "\n",
+    "import dis\n",
+    "dis.dis(countdown)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ca38439d-f223-419e-865c-c79d9c7e6431",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C:\\\\Users\\\\jiangyz\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python312\\\\python312.zip', 'C:\\\\Users\\\\jiangyz\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python312\\\\DLLs', 'C:\\\\Users\\\\jiangyz\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python312\\\\Lib', 'C:\\\\Users\\\\jiangyz\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python312', 'c:\\\\root\\\\dev\\\\venv', '', 'c:\\\\root\\\\dev\\\\venv\\\\Lib\\\\site-packages', 'c:\\\\root\\\\dev\\\\venv\\\\Lib\\\\site-packages\\\\win32', 'c:\\\\root\\\\dev\\\\venv\\\\Lib\\\\site-packages\\\\win32\\\\lib', 'c:\\\\root\\\\dev\\\\venv\\\\Lib\\\\site-packages\\\\Pythonwin']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "30d6f40b-74a1-4c95-9faa-43fc2ce2c25e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9092974268256817\n",
+      "<http.client.HTTPResponse object at 0x00000141D36673D0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import importlib\n",
+    "math = importlib.import_module('math')\n",
+    "print(math.sin(2))\n",
+    "\n",
+    "mod = importlib.import_module('urllib.request')\n",
+    "u = mod.urlopen('http://www.python.org')\n",
+    "print(u)"
+   ]
   }
  ],
  "metadata": {
